		Implementing an X11 mouse pointer grab mechanism. Grab is
		activated by clicking in a framebuffer window, and released
		using left CTRL + ALT. When grab is active, the host mouse
		cursor is hidden and the window caption changes to indicate
		that grab is active.
20210408	Implementing an unusual 88K "not_maxneg_nor_zero" bcnd
		condition.
20210409	Moving the LUNA88K framebuffer to its own device file.
		Beginning to implement the LUNA88K front panel LCD.
		Also fixing a bug where the rightmost pixel (or 8 pixels in
		the case of monochrome) were not drawn.
20210410	Also check for X11R7 in the configure script, in addition
		to X11R6.
20210417	Porting over i960CA disassembly from the C++ framework.
20210418	More i960 stuff, including re-adding the (so far dummy)
		Cyclone VH machine.
		Assuming availabilty of __func__ (C99 standard).
20210422	Enabling idle detection for OpenBSD/luna88k, which uses a
		bcnd.n instruction. A hack, but it seems to work.
		Fixing a bug where console input could randomly be lost when
		idling, if there were multiple emulated serial ports.

==============  RELEASE 0.7.0  ==============

20210426	Adding disassembly of 88K "tcnd", and treating tcnd ne0,r0,x
		as a nop (since r0 is always zero).
20210427	Refactoring of the breakpoint handling code; moving towards
		subsystem breakpoints. (So far, -T is implemented as a
		breakpoint for the "memory" subsytem.)
20210428	Implementing 88K word and byte memset loops (used by the
		OpenBSD/luna88k kernel and userland, respectively).
20210429	Applying a patch from Kenji Aoyama for calculating LUNA-88K
		FUSE ROM checksum.
20210504	More refactoring of breakpoints: internal support for printing
		instead of breaking, hits are now counted, CTRL-T prints
		breakpoint status etc. (No way to interactively configure all
		settings yet, though.)
20210506	Improved SMP stability by making sure to invalidate code
		translations for _all_ CPUs on memory writes, not just for the
		CPU doing the write.